# linux_setup

./: Cargo.toml  README.md  chroot_playbook.yml  playbook.yml  user_playbook.yml  vars.yml
dotfiles/: .gitconfig  .picom.conf  .zshenv  .zshrc  kitty.conf
dotfiles/.themes/Gruvbox-Dark/cinnamon/: cinnamon.css
dotfiles/.themes/Gruvbox-Dark/gnome-shell/: gnome-shell.css
dotfiles/.themes/Gruvbox-Dark/gtk-3.0/: gtk-dark.css
dotfiles/.themes/Gruvbox-Dark/gtk-4.0/: gtk.css
dotfiles/.themes/Gruvbox-Light/cinnamon/: cinnamon.css
dotfiles/.themes/Gruvbox-Light/gnome-shell/: gnome-shell.css
dotfiles/.themes/Gruvbox-Light/gtk-3.0/: gtk.css
dotfiles/.themes/Gruvbox-Light/gtk-4.0/: gtk.css
dotfiles/.zfunc/: pya  run_pg  run_rmq
dotfiles/firefox/: user.js  userChrome.css
dotfiles/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
dotfiles/hypr/swaync/: config.json  style.less
dotfiles/hypr/waybar/: config.jsonc  style.css
dotfiles/hypr/wofi/: config.conf  style.css
dotfiles/i3wm/: i3_config  i3blocks_config  polybar_config.ini  polybar_launch.sh
dotfiles/kitty/: kitty.conf
dotfiles/nvim/: init.lua  lazy-lock.json
dotfiles/nvim/lua/config/: lazy.lua  lsp.lua
dotfiles/nvim/plugs/: README.md
dotfiles/rofi/: config.rasi  theme.rasi
dotfiles/zfunc/: run_redis
playbooks/: instal_wm.yml  install_packages.yml  os_setup.yml  setup_user.yml
playbooks/taskgroups/: install_from_git.yml  install_grub.yml  install_i3.yml  safe_copy.yml
src/: cli.rs  consts.rs  custom_package.rs  dotfiles.rs  main.rs  utils.rs
src/wm/: hypr.rs  mod.rs
(+8 files in other folders)
